Atualizado meu projeto do desafio da Escola DNC

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 <div id="Historia"><div class="texto">
     <h1 id="titulo-historia">Arquitetos com História e Experiência.</h1><br><br>
     <p id="texto-historia"> Nós realizamos desde 2002 projetos e gerenciamento de obras.<br>
-        Com mais de 800 projetos e 2.000.000 de m² construídos, tendo .<br>
-        como principal proposta transformar em realidade os sonhos de.<br>
-         seus clientes, criando projetos personalizados, unindo a tradição .<br>
+        Com mais de 800 projetos e 2.000.000 de m² construídos, tendo <br>
+        como principal proposta transformar em realidade os sonhos de<br>
+         seus clientes, criando projetos personalizados, unindo a tradição <br>
          e a modernidade em nossos projetos.</p></div>
 
          <img  id="image" src="./img/arquitetura.svg" alt="">
